# aldemarvim

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
scripts/: build_deb.sh  build_exe.py  create_icon.py
src/: __init__.py  config.py  main.py
src/database/: db_manager.py
src/services/: __init__.py  ocr_service.py  pdf_service.py  translation_service.py
src/ui/: __init__.py  base.py  delete_dialog.py  extraction_form.py  image_capture_screen.py  main_screen.py  splash_screen.py  text_editor_screen.py
src/utils/: __init__.py  logo_generator.py
